--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=LoginHandler
 
 # Configurações do MySQL
-spring.datasource.url=jdbc:mysql://localhost:3306/ls_db?useSSL=false&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=1mpostoeroubO@
+spring.datasource.url=jdbc:mysql://avnadmin:AVNS_8dsywxb_VF8pomXi2i6@liberum-scientia-liberum-scientia.i.aivencloud.com:23324/defaultdb?ssl-mode=REQUIRED
+spring.datasource.username=avnadmin
+spring.datasource.password=AVNS_8dsywxb_VF8pomXi2i6
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Configurações do JPA/Hibernate
