--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -22,3 +22,17 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v3
+
+    - name: Setup java
+      uses: actions/setup-java@v3
+      with: 
+        distribution: 'temurin'
+        java-version: '17'
+    - name: Build Project
+      run: mvn clean install -DskipTests   
+    - name:  Login Docker Hub
+      run: docker login -u ${{secrets.DOCKER_USERNAME}} -p ${{secrets.DOCKER_PASSWORD}}
+    - name: Build docker image
+      run: docker build -t gxbxdev/Login_Handle .
+    - name: Push image docker
+      run: docker push gxbxdev/Login_Handle
