--- a/pom.xml
+++ b/pom.xml
@@ -10,9 +10,9 @@
 	</parent>
 	<groupId>online.liberumscientia</groupId>
 	<artifactId>LoginHandler</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.1</version>
 	<name>LoginHandler</name>
-	<description>Demo project for Spring Boot</description>
+	<description>Login_Handler</description>
 	<url/>
 	<licenses>
 		<license/>
