--- a/nginx.conf
+++ b/nginx.conf
@@ -1,20 +1,9 @@
 server {
     listen 80;
-    server_name example.com;
-
-    # Redireciona todo o tráfego HTTP para HTTPS
-    return 301 https://$host$request_uri;
-}
-
-server {
-    listen 443 ssl;
     server_name liberumscientia.shop;
 
-    ssl_certificate /etc/ssl/certs/your_certificate.crt;
-    ssl_certificate_key /etc/ssl/private/your_private.key;
-
     location / {
-        proxy_pass http://login_handler:8080; # Redireciona para a sua aplicação
+        proxy_pass http://login_handler:8080; # Endereço da sua aplicação
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
