--- a/nginx.conf
+++ b/nginx.conf
@@ -1,12 +1,13 @@
 server {
     listen 80;
-    server_name liberumscientia.shop;
+    server_name liberumscientia.shop www.liberumscientia.shop;
 
     location / {
-        proxy_pass http://login_handler:8080; # Endereço da sua aplicação
+        proxy_pass http://localhost:8080;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 }
+
