--- a/nginx.conf
+++ b/nginx.conf
@@ -3,7 +3,7 @@ server {
     server_name liberumscientia.shop www.liberumscientia.shop;
 
     location / {
-        proxy_pass http://localhost:8080;
+        proxy_pass http://login_handler:8080;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
