--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,6 @@ springdoc.swagger-ui.enabled=true
 # Configuração de beans
 spring.main.allow-bean-definition-overriding=true
 spring.main.allow-circular-references=true
+
+# Configuração do server
+server.port=${PORT:8080}
