--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=LoginHandler
 
 # Configurações do MySQL
-spring.datasource.url=jdbc:mysql://${DB_HOST}:${DB_PORT}/${DB_NAME}
-spring.datasource.username=${DB_USER}
-spring.datasource.password=${DB_PASSWORD}
+spring.datasource.url=jdbc:mysql://localhost:3306/liberum_scientia
+spring.datasource.username=root
+spring.datasource.password=1mpostoeroubO@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 
